# hack-balatro

./: .gitignore  260316-handoff.md  Agent-Style.md  CLAUDE.md  Cargo.toml  README.md  agents.md  progress.md  pyproject.toml
Plan/: rever-engineering-plan.md  trajectory-plan.md
agents/: base.py  greedy_agent.py  ppo_agent.py  random_agent.py  simple_rule_agent.py  smart_agent.py
configs/: repro.yaml
crates/balatro-py/: Cargo.toml  pyproject.toml
crates/balatro-py/src/: lib.rs
docs/: archived_strategy_hints_20260424.md  balatro-source-entrypoints.md  canonical_trajectory_schema.md  licensed-source-bootstrap.md
env/: __init__.py  action_inference.py  action_space.py  balatro_gym_wrapper.py  canonical_trajectory.py  locale.py  prompt_builder.py  state_encoder.py  state_mapping.py  state_serializer.py
eval/: compare_baselines.py  eval_policy.py  seeds.json
models/: policy_value_net.py
rebuild/: 00-project-overview.md  01-repositories-and-dependencies.md  02-simulation-environment.md  03-observation-space.md  04-action-space.md  05-model-architecture.md  06-agents.md  07-training-pipeline.md  08-reward-design.md  09-evaluation.md  10-design-rationale.md  11-balatro-game-rules.md  14-academic-references.md
results/: fidelity-coverage.json  fidelity-suite-report.md  replay-fidelity-a.behavior_log.jsonl  replay-fidelity-b.behavior_log.jsonl  replay-fidelity.audit.json  replay-fidelity.cli.txt  replay-fidelity.diff.json  replay-latest.html  replay-latest.json  replay-proof.audit.json  replay-proof.behavior_log.jsonl  replay-proof.cli.txt  replay-proof.json  (+3 more)
(+304 files in other folders)
