[workspace]
members = [
  "crates/balatro-spec",
  "crates/balatro-engine",
  "crates/balatro-py",
]
default-members = [
  "crates/balatro-spec",
  "crates/balatro-engine",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
rand_chacha = "0.3"
pyo3 = { version = "0.23.4", features = ["abi3-py310", "extension-module"] }
