[package]
name = "balatro-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "balatro_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
balatro-engine = { path = "../balatro-engine" }
balatro-spec = { path = "../balatro-spec" }
pyo3.workspace = true
serde_json.workspace = true
